deployments/manifests/webhooks/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vgpu-controller-webhook
  namespace: vgpu-system
spec:
  selector:
    control-plane: vgpu-controller
  ports:
    - port: 443
      targetPort: 9443
      protocol: TCP
      name: webhook
